Fixed overlapping issue for activity gravatars
git-svn-id: http://svn.techno-weenie.net/projects/mephisto/trunk@1450 567b1171-46fb-0310-a4c9-b4bef9110e78

--- a/public/stylesheets/mephisto.css
+++ b/public/stylesheets/mephisto.css
@@ -889,12 +889,13 @@ img.avatar {
 }
 
 #activity .avatar {
-  max-width: 45px;
-  max-height: 45px;
+  max-width: 30px;
+  max-height: 30px;
 }
 
 #activity li {
-  min-height: 30px;
+  min-height: 40px;
+  line-height: 125%;
 }
 
 #stat-comments {
